--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ path = "src/bin/main.rs"
 [dependencies]
 anyhow = "1.0.81"
 clap = { version = "4.5.4", features = ["std", "derive", "env"] }
-tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
+pin-project = "1.1.5"
+tokio = { version = "1.37.0", features = ["io-util", "rt-multi-thread", "macros", "net"] }
 notify = "6.1.1"
