--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Builds on ${{ matrix.os }}
+    name: Builds on ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
