--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,5 +42,11 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
+      - name: Install ${{ matrix.name }} System Dependencies
+        if: matrix.name == 'linux-x64-musl'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-tools
+
       - name: Build for Release
         run: cargo build --release --target ${{ matrix.target }}
