fix: openssl requirements ubuntu (#5)
Default features for reqwest on Ubuntu relies on OpenSSL due to the use
of
[`rust-native-tls`](https://github.com/seanmonstar/reqwest/blob/a205128f038431e37bfff25ade4ff04d20e7dd32/Cargo.toml#L27),
in order to avoid relying on OpenSSL `rustls` is used instead.

As of now is set for all platforms but it could be enabled only for
Ubuntu in the future.

<!--
Developer's Certificate of Origin 1.1

By making a contribution to this project, I certify that:

(a) The contribution was created in whole or in part by me and I
    have the right to submit it under the open source license
    indicated in the file; or

(b) The contribution is based upon previous work that, to the best
    of my knowledge, is covered under an appropriate open source
    license and I have the right under that license to submit that
    work with modifications, whether created in whole or in part
    by me, under the same open source license (unless I am
    permitted to submit under a different license), as indicated
    in the file; or

(c) The contribution was provided directly to me by some other
    person who certified (a), (b) or (c) and I have not modified
    it.

(d) I understand and agree that this project and the contribution
    are public and that a record of the contribution (including all
    personal information I submit with it, including my sign-off) is
    maintained indefinitely and may be redistributed consistent with
    this project or the open source license(s) involved.
-->

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
 
   artifacts:
     needs: release
-    name: Upload Artifacts ${{ matrix.os }}
+    name: Upload Artifacts ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -120,6 +120,12 @@ jobs:
 
       - name: Build for Release
         run: cargo build --release --target ${{ matrix.target }}
+
+      - name: Install ${{ matrix.name }} System Dependencies
+        if: matrix.name == 'linux-x64-musl'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-tools
 
       - name: Prepare Binary
         shell: bash
