--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,23 +8,45 @@ on:
 
 jobs:
   build:
-    name: Builds on ${{ matrix.os }}
+    name: Builds on ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [
-          ubuntu-latest,
-          windows-latest,
-          macOS-latest
-        ]
+        name:
+          - linux-x64-musl
+          - macos-x64
+          - macos-aarch64
+
+        include:
+          - name: linux-x64-musl
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            exe: wait-on
+
+          - name: macos-x64
+            os: macos-latest
+            target: x86_64-apple-darwin
+            exe: wait-on
+
+          - name: macos-aarch64
+            os: macos-latest
+            target: aarch64-apple-darwin
+            exe: wait-on
 
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: actions-rs/toolchain@v1
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
-          toolchain: stable
+          targets: ${{ matrix.target }}
 
-      - name: Build
-        run: cargo build --release
+      - name: Install ${{ matrix.name }} System Dependencies
+        if: matrix.name == 'linux-x64-musl'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-tools
+
+      - name: Build for Release
+        run: cargo build --release --target ${{ matrix.target }}
