chore: use rust target in filename

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,6 +113,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set Crate Version as Environment Variable
+        run: |
+          CARGO_TOML_VERSION=$(awk -F ' = ' '$1 ~ /version/ { gsub(/[\"]/, "", $2); printf("%s",$2) }' Cargo.toml)
+          echo "CRATE_VERSION=$CARGO_TOML_VERSION" >> $GITHUB_ENV
+
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -131,17 +136,12 @@ jobs:
         shell: bash
         run: |
           chmod +x ./target/${{ matrix.target }}/release/${{ matrix.exe }}
-          cp ./target/${{ matrix.target }}/release/${{ matrix.exe }} ./${{ matrix.exe }}
-
-      - name: Set Crate Version as Environment Variable
-        run: |
-          CARGO_TOML_VERSION=$(awk -F ' = ' '$1 ~ /version/ { gsub(/[\"]/, "", $2); printf("%s",$2) }' Cargo.toml)
-          echo "CRATE_VERSION=$CARGO_TOML_VERSION" >> $GITHUB_ENV
+          cp ./target/${{ matrix.target }}/release/${{ matrix.exe }} ./wait-on-${{ matrix.target }}
 
       - name: Attach Binary
         uses: svenstaro/upload-release-action@2.9.0
         with:
           asset_name: wait-on-${{ matrix.target }}
-          file: ${{ matrix.exe }}
+          file: wait-on-${{ matrix.target }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: "v${{ env.CRATE_VERSION }}"
