--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ path = "src/bin/main.rs"
 [dependencies]
 anyhow = "1.0.81"
 clap = { version = "4.5.4", features = ["std", "derive", "env"] }
+humantime = "2.1.0"
 pin-project = "1.1.5"
 reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
 tokio = { version = "1.37.0", features = ["io-util", "rt-multi-thread", "macros", "net"] }
