fix(cd): split cd steps for reuseability

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,36 +31,86 @@ jobs:
       - name: publish crate
         run: cargo publish --dry-run
 
-  release:
-    name: Create Release
+  tag-bump:
+    name: Tag Bump
     needs: publish-dry-run
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.set-tag.outputs.tag }}
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install `cargo-edit`
-        run: cargo install cargo-edit
+      - name: Setup Rust Cache
+        uses: Swatinem/rust-cache@v2
+
+      - name: Setup Cargo Binstall
+        uses: cargo-bins/cargo-binstall@main
+
+      - name: Install Rust Binaries
+        run: |
+          cargo binstall -y --force cargo-edit
 
       - id: cargo-set-version
         name: Set Version
         run: cargo set-version --bump ${{ inputs.version }}
 
-      - name: Set Crate Version as Environment Variable
+      - name: Set Tag as Output
+        id: set-tag
         run: |
           CARGO_TOML_VERSION=$(awk -F ' = ' '$1 ~ /version/ { gsub(/[\"]/, "", $2); printf("%s",$2) }' Cargo.toml)
-          echo "CRATE_VERSION=$CARGO_TOML_VERSION" >> $GITHUB_ENV
+          echo "::set-output name=tag::$CARGO_TOML_VERSION"
+
+      - name: Print Tag
+        run: echo ${{ steps.set-tag.outputs.tag }}
 
       - name: Create Commit
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
-          git commit -m "chore: bump version to v$CRATE_VERSION"
+          git commit -m "chore: bump version to v${{ steps.set-tag.outputs.tag }}"
           git push origin main --follow-tags
+
+
+  release:
+    name: Create Release
+    needs: tag-bump
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Create Release
+        id: create_release
+        uses: actions/github-script@v5
+        with:
+          script: |
+            await github.request(`POST /repos/${{ github.repository }}/releases`, {
+              tag_name: "v${{ needs.tag-bump.outputs.tag }}",
+              generate_release_notes: true
+            });
+
+  publish:
+    name: Publish to Crates.io
+    needs:
+      - release
+      - tag-bump
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: "refs/tags/v${{ needs.tag-bump.outputs.tag }}"
+
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Setup Rust Cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Login to Crates.io
         run: cargo login ${CRATES_IO_TOKEN}
@@ -70,18 +120,11 @@ jobs:
       - name: Publish crate
         run: cargo publish
 
-      - name: Create Release
-        id: create_release
-        uses: actions/github-script@v5
-        with:
-          script: |
-            await github.request(`POST /repos/${{ github.repository }}/releases`, {
-              tag_name: "v${{ env.CRATE_VERSION }}",
-              generate_release_notes: true
-            });
-
   artifacts:
-    needs: release
+    needs:
+      - tag-bump
+      - release
+      - publish
     name: Upload Artifacts ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
     env:
@@ -112,11 +155,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set Crate Version as Environment Variable
-        run: |
-          CARGO_TOML_VERSION=$(awk -F ' = ' '$1 ~ /version/ { gsub(/[\"]/, "", $2); printf("%s",$2) }' Cargo.toml)
-          echo "CRATE_VERSION=$CARGO_TOML_VERSION" >> $GITHUB_ENV
+        with:
+          ref: "refs/tags/v${{ needs.tag-bump.outputs.tag }}"
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -144,4 +184,4 @@ jobs:
           asset_name: wait-on-${{ matrix.target }}
           file: wait-on-${{ matrix.target }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: "v${{ env.CRATE_VERSION }}"
+          tag: "v${{ needs.tag-bump.outputs.tag }}"
